Added mapper command to get fname

--- a/notebooks/M5MS19-W2.ipynb
+++ b/notebooks/M5MS19-W2.ipynb
@@ -336,6 +336,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this exercise, you will need to establish which datafile the mapper is processing, so that you can appropriately label the values for use in the joiner. To extract the filename within the mapper, use the following python code:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fname = os.environ[\"map_input_file\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Exercise 4"
    ]
   },
