Added local testing command to E4

--- a/notebooks/M5MS19-W1.ipynb
+++ b/notebooks/M5MS19-W1.ipynb
@@ -600,6 +600,24 @@
     "</ol>\n",
     "</i></li>\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "At this point, you may introduce an error in your Python code. Hadoop produces an unhelpful error message (Error: NA) when you have a coding problem. A good testing strategy is to run a subset of the data through python code on the local machine. To do this, execute the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cat ../data/textData.txt | python mapper.py | sort -k1,1 | python reducer.py"
+   ]
   }
  ],
  "metadata": {
