--- a/notebooks/M5MS19-W3.ipynb
+++ b/notebooks/M5MS19-W3.ipynb
@@ -231,7 +231,7 @@
    "outputs": [],
    "source": [
     "scala> def isHeader(line: String): Boolean = {\n",
-    "line.contains(\"yyyy\")\n",
+    "line.contains(\"yyyy\") || line.split(" ").size != 5\n",
     "}"
    ]
   },
